Corrected microscope aspect ratio, positioned behind lenses

--- a/public/css/floatingitems.css
+++ b/public/css/floatingitems.css
@@ -14,7 +14,8 @@
 #microscopebg{
   position: absolute;
   height: 90vh;
-  width: 40vh;
+  width: 50.625vh;
+  left: -10.5vh;
 }
 
 #columndivzoom{
